# GAMES_101_202_Homework

./: .gitignore  README.md
Homework_101/Assignment1/: main.cpp
Homework_101/Assignment1/Code/: main.cpp
Homework_101/Assignment2/: main.cpp  rasterizer.cpp  rasterizer.hpp
Homework_101/Assignment2/Code/: main.cpp
Homework_101/Assignment3/: main.cpp  rasterizer.cpp
Homework_101/Assignment4/: main.cpp
Homework_101/Assignment5/Code/: Renderer.cpp  Triangle.hpp
Homework_101/Assignment6/Code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Homework_101/Assignment7/Code/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp
Homework_101/Assignment8/Code/src/: rope.cpp
Homework_101/pa0/: main.cpp
Homework_202/Assignment0/: index.html
Homework_202/Assignment0/lib/: MTLLoader.js
Homework_202/Assignment0/src/: engine.js
Homework_202/Assignment0/src/lights/: Light.js  PointLight.js
Homework_202/Assignment0/src/loads/: loadOBJ.js  loadShader.js
Homework_202/Assignment0/src/materials/: Material.js  PhongMaterial.js
Homework_202/Assignment0/src/objects/: Mesh.js
Homework_202/Assignment0/src/renderers/: MeshRender.js  WebGLRenderer.js
Homework_202/Assignment0/src/shaders/: InternalShader.js  Shader.js
Homework_202/Assignment0/src/shaders/lightShader/: fragment.glsl  vertex.glsl
Homework_202/Assignment0/src/shaders/phongShader/: fragment.glsl  vertex.glsl
Homework_202/Assignment0/src/textures/: Texture.js
Homework_202/Assignment1/: README.md
Homework_202/Assignment1/homework1/: LICENSE  README.md  index.html
Homework_202/Assignment1/homework1/lib/: OBJLoader.js  dat.gui.js  imgui_impl.umd.js
Homework_202/Assignment1/homework1/src/: engine.js
Homework_202/Assignment1/homework1/src/lights/: DirectionalLight.js  Light.js  PointLight.js
Homework_202/Assignment2/: README.md  void self_transfer_sh().cpp
Homework_202/Assignment2/homework2/: README.md  index.html
Homework_202/Assignment2/homework2/lib/: RGBELoader.js  bvhtree.js  three.js
Homework_202/Assignment2/homework2/src/: engine.js
Homework_202/Assignment2/prt/: CMakeLists.txt
Homework_202/Assignment2/prt/ext/: CMakeLists.txt
Homework_202/Assignment2/prt/ext/openexr/: .gitignore  .gitmodules  CMakeLists.txt
Homework_202/Assignment2/prt/ext/openexr/IlmBase/: CMakeLists.txt
Homework_202/Assignment2/prt/ext/openexr/IlmBase/Half/: CMakeLists.txt  half.h  halfLimits.h
Homework_202/Assignment2/prt/ext/openexr/IlmBase/Iex/: CMakeLists.txt  IexNamespace.h
Homework_202/Assignment2/prt/ext/openexr/IlmBase/IexMath/: CMakeLists.txt  IexMathFloatExc.h
Homework_202/Assignment2/prt/ext/openexr/IlmBase/IlmThread/: CMakeLists.txt
Homework_202/Assignment2/prt/ext/openexr/IlmBase/Imath/: CMakeLists.txt  ImathMatrix.h  ImathNamespace.h
Homework_202/Assignment2/prt/ext/openexr/IlmBase/config.windows/: IlmBaseConfig.h
Homework_202/Assignment2/prt/ext/openexr/OpenEXR/: CMakeLists.txt
Homework_202/Assignment2/prt/ext/openexr/OpenEXR/IlmImf/: CMakeLists.txt  ImfAttribute.h  ImfConvert.cpp  ImfNamespace.h
Homework_202/Assignment2/prt/ext/openexr/OpenEXR/IlmImfUtil/: CMakeLists.txt
Homework_202/Assignment2/prt/scenes/: prt.exr  prt.xml
Homework_202/Assignment2/prt/src/: accel.cpp  main.cpp  prt.cpp
Homework_202/Assignment3/: README.md  index.html
Homework_202/Assignment3/assets/cube/: cube1.gltf  cube2.gltf
Homework_202/Assignment3/lib/: GLTFLoader.js
Homework_202/Assignment3/src/: engine.js
Homework_202/Assignment3/src/lights/: DirectionalLight.js  PointLight.js
Homework_202/Assignment3/src/loads/: loadGLTF.js  loadOBJ.js  loadShader.js
Homework_202/Assignment3/src/materials/: DirectLightMaterial.js  GBufferMaterial.js  Material.js  SSRMaterial.js  SceneDepthDebugMaterial.js  SceneDepthMaterial.js  ShadowMaterial.js
Homework_202/Assignment3/src/objects/: Mesh.js
Homework_202/Assignment3/src/renderers/: MeshRender.js  WebGLRenderer.js
Homework_202/Assignment3/src/shaders/: InternalShader.js
Homework_202/Assignment3/src/textures/: DepthFBO.js  FBO.js  Texture.js  imageUrlTexture.js
Homework_202/Assignment4/: README.md
Homework_202/Assignment4/homework4/: TODO.md  index.html
Homework_202/Assignment4/homework4/assets/: winter_sky_1k.hdr
Homework_202/Assignment4/homework4/develop_book/: 简明-Git-教程.md
Homework_202/Assignment4/homework4/lib/: imgui.umd.js  math.js  sh.js
Homework_202/Assignment4/homework4/src/: engine.js
Homework_202/Assignment4/lut-gen/: CMakeLists.txt  Eavg_IS.cpp  Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp  test.sh
Homework_202/Assignment4/lut-gen/ext/: vec.h
Homework_202/Assignment5/: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  image2video.bat  image2video.sh
Homework_202/Assignment5/src/: .clang-format  denoiser.cpp  denoiser.h  main.cpp
Homework_202/Assignment5/src/ext/filesystem/: path.h
Homework_202/Assignment5/src/util/: buffer.h  common.h  image.cpp  image.h  imageutil.cpp  imageutil.h  mathutil.cpp  mathutil.h
(+125 files in other folders)
